; ModuleID = '/home/carl/AnghaBench/zfs/module/icp/io/extr_aes.c_aes_mac_verify_atomic.c'
source_filename = "/home/carl/AnghaBench/zfs/module/icp/io/extr_aes.c_aes_mac_verify_atomic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i8*, i32 }

@CRYPTO_SUCCESS = common dso_local global i32 0, align 4
@AES_GCM_MECH_INFO_TYPE = common dso_local global i32 0, align 4
@null_crypto_data = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, %struct.TYPE_5__*, i32*, i32*, i32*, i32, i32)* @aes_mac_verify_atomic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aes_mac_verify_atomic(i32 %0, i32 %1, %struct.TYPE_5__* %2, i32* %3, i32* %4, i32* %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_5__*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca %struct.TYPE_5__, align 8
  %20 = alloca i32, align 4
  store i32 %0, i32* %10, align 4
  store i32 %1, i32* %11, align 4
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32* %4, i32** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %22 = load i32*, i32** %14, align 8
  %23 = call i32 @process_gmac_mech(%struct.TYPE_5__* %21, i32* %22, i32* %18)
  store i32 %23, i32* %20, align 4
  %24 = load i32, i32* @CRYPTO_SUCCESS, align 4
  %25 = icmp ne i32 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %8
  %27 = load i32, i32* %20, align 4
  store i32 %27, i32* %9, align 4
  br label %41

28:                                               ; preds = %8
  %29 = load i32, i32* @AES_GCM_MECH_INFO_TYPE, align 4
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 2
  store i32 %29, i32* %30, align 8
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  store i32 4, i32* %31, align 8
  %32 = bitcast i32* %18 to i8*
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 1
  store i8* %32, i8** %33, align 8
  %34 = load i32, i32* %10, align 4
  %35 = load i32, i32* %11, align 4
  %36 = load i32*, i32** %13, align 8
  %37 = load i32*, i32** %15, align 8
  %38 = load i32, i32* %16, align 4
  %39 = load i32, i32* %17, align 4
  %40 = call i32 @aes_decrypt_atomic(i32 %34, i32 %35, %struct.TYPE_5__* %19, i32* %36, i32* %37, i32* @null_crypto_data, i32 %38, i32 %39)
  store i32 %40, i32* %9, align 4
  br label %41

41:                                               ; preds = %28, %26
  %42 = load i32, i32* %9, align 4
  ret i32 %42
}

declare dso_local i32 @process_gmac_mech(%struct.TYPE_5__*, i32*, i32*) #1

declare dso_local i32 @aes_decrypt_atomic(i32, i32, %struct.TYPE_5__*, i32*, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
